[project]
name = "pgliveapp"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "takumi-nishimura", email = "clp13218@nitech.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "pglive>=0.8.0",
    "pyqt6>=6.8.0",
]

[project.scripts]
pgliveapp = "pgliveapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
